ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress-synergy
  namespace: jenkins-prod
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - jenkins2.a.incd.pt
    secretName: jenkins-synergy-cert
  rules:
  - host: jenkins2.a.incd.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-operator-http-synergy
            port:
              number: 8080
